# ZIP-Archivator

./: .gitignore  MyZIPConvertor.slnx  README.md
MyZIPConvertor/: ArchiveCore.cpp  ArchiveCore.h  BitReader.h  BitStream.cpp  BitStream.h  CMakeLists.txt  Huffman.cpp  Huffman.h  MyZIPConvertor.cpp  MyZIPConvertor.rc  MyZIPConvertor.vcxproj  MyZIPConvertor.vcxproj.filters  RCa11612
